Don't remember what I did but I fixed the extra white spacing the the deployed version. Back to actual work!

--- a/src/Components/Navigation/index.css
+++ b/src/Components/Navigation/index.css
@@ -1,8 +1,19 @@
+header {
+  max-width: 100%;
+  margin: 0;
+  padding: 0 auto;
+  border: 0;
+}
+
 .navbar {
-  position: sticky;
+  /* position: relative; */
   top: 0;
   color: #FFFFFF;
   font-size: 1rem;
+  max-width: 100%;
+  margin: 0;
+  padding: 0 auto;
+  border: 0;
 }
 
 #navlink{
