--- a/src/Components/Pages/About/index.css
+++ b/src/Components/Pages/About/index.css
@@ -1,6 +1,7 @@
 .aboutPage {
   background-color: #121212;
-  padding: 10px;
+  padding-top: 10px;
+  padding-bottom: 10px;
   margin: 0;
 }
 
